# UltrawideFixes

./: .editorconfig  .gitignore  25% resize.bat  50% resize.bat  CLAUDE.md  GlobalSuppressions.cs  LICENSE  README.md  Screenshot to Main page.bat  Screenshot to Release page.bat  _ul  resize.bat  zip.target
.github/: FUNDING.yml
20MinuteTillDawn/: 20MinutesillDawn.sln  Directory.Build.props  README.md
AgathaChristieMOE/: Directory.Build.props  README.md
AlexKiddMiracleWorldDX/: Directory.Build.props  README.md
AlwasLegacy/: Directory.Build.props  README.md
AnodeHeart/: AnodeHeart.sln  Directory.Build.props  README.md
Anodyne2/: Anodyne2.sln  Directory.Build.props  README.md
BingWonderland/: BingWonderland.sln  Directory.Build.props
BlueOakBridge/: BlueOakBridge.sln  README.md  other_zip.target  win_zip.target
ChainedEchoes/: README.md
ChildrenOfMorta/: README.md
CoreKeeper/: .gitignore  Directory.Build.props  README.md
Cuisineer/: Cuisineer.sln  Directory.Build.props  README.md
DarkestDungeon2/: Directory.Build.props  README.md
DeathMustDie/: Directory.Build.props  README.md
DeathOrTreat/: Directory.Build.props  README.md
DisneyDreamlight/: DisneyDreamlight.sln
Elderland/: Directory.Build.props  Elderland.sln  README.md
FlipWitch/: README.md
GoldenLight/: Directory.Build.props  GoldenLight.sln  README.md
HerosAdventureRoadToPassion/: HerosAdventureRoadToPassion.sln  README.md
KazeUW/: Plugin.cs  README.md  UnityEvents.cs
NierReplicant/Patcher/: Cargo.toml  LICENSE  README.md  build.rs
NierReplicant/Patcher/src/: main.rs
(+7344 files in other folders)
