cargo-features = ["edition2024"]

[package]
name = "nier_ultrawide_patcher"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
hex-literal = "0.4.1"
dialoguer = "0.11.0"
spinners = "4.1.1"
ureq = "2.3.1"

[build-dependencies]
winres = "0.1.12"