cargo-features = ["edition2024"]

[package]
name = "nier_ultrawide_aio"
version = "1.1.0"
edition = "2024"
build = "build.rs"
[target.'cfg(windows)'.build-dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
hex-literal = "0.4.1"
dialoguer = "0.10.4"
spinners = "4.1.1"
ureq = "2.3.1"
indicatif = "0.17.8"

[build-dependencies]
winres = "0.1.12"